<resources>
    <string-array name="spot_types">
        <item>Parkour Park</item>
        <item>Wall Jumps</item>
        <item>Stairs</item>
        <item>Playground</item>
        <item>Calisthenics</item>
        <item>Big Area</item>
        <item>Other</item>
    </string-array>
    <string name="app_name">Parkour</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_teams">Teams</string>
    <string name="title_meet_ups">Meet Ups</string>
    <string name="title_profile">Profile</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="sent_friend_reqest">Sent Friend Request</string>
    <string name="unfollow_user">Unfollow</string>
    <string name="cancel">Cancel</string>
    <string name="user_already_sent_friend_request">User already sent you a friend request</string>
    <string name="user_no_uploads">User hasn\'t uploaded anything yet</string>
    <string name="friend_requests">Friend requests</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date (dd.MM.yyyy HH:mm)</string>
    <string name="end_date">End Date (dd.MM.yyyy HH:mm)</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="meet_up_created">Meet Up created</string>
    <string name="error_date_older_than_start_date">Date is older than start date</string>
    <string name="error_date_expired">Date is expired</string>
    <string name="error_empty">Can\'t be empty</string>
    <string name="team_name">Team name</string>
    <string name="password">Password</string>
    <string name="team">Team</string>
    <string name="team_created">Team created</string>
    <string name="show_username">Username:</string>
    <string name="show_password">Password:</string>
    <string name="show_country">Country:</string>
    <string name="show_city">City:</string>
    <string name="show_age">Age:</string>
    <string name="show_description">Description:</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="settings">Settings</string>
    <string name="join_team">Join Team</string>
    <string name="logout">Logout</string>
    <string name="team_key">Team Key</string>
    <string name="join">Join</string>
    <string name="friends">Friends</string>
    <string name="support">Support</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_key">Wrong Key</string>
    <string name="already_in_team">You are already in this team</string>
    <string name="hey_look_at_this_spot">Hey, look at this spot!</string>
    <string name="hey_look_at_this_picture">Hey, look at this picture!</string>
    <string name="message">Message</string>
    <string name="show_location">Location:</string>
    <string name="show_start_date">Start date:</string>
    <string name="show_end_date">End date:</string>
    <string name="show_duration">Duration:</string>
    <string name="show_accept_users">Accept users:</string>
    <string name="show_declined_users">Declined users:</string>
    <string name="team_members">Team members</string>
    <string name="parkour_spot">Parkour Spot</string>
    <string name="post_picture">Upload picture</string>
    <string name="search">Search</string>
    <string name="only_spots">Only Spots</string>
    <string name="austria">Austria</string>
    <string name="vienna">Vienna</string>
    <string name="parkour_meet_ups">Parkour | Meet Ups</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_message">Delete message?</string>
    <string name="delete">Delete</string>
    <string name="nobody_accepted">Nobody has accepted yet</string>
    <string name="nobody_declined">Nobody has declined yet</string>
    <string name="delete_meet_up">Delete this meet up?</string>
    <string name="leave">Leave</string>
    <string name="leave_team">Leave this team?</string>
    <string name="delete_team">Delete this team?</string>
    <string name="accepted">Accepted</string>
    <string name="decline_meet_up">Decline meet up?</string>
    <string name="user_already_exists">User already exists</string>
    <string name="error_user_or_password_wrong">Username or password is wrong</string>
    <string name="post_spot">Upload Spot</string>
    <string name="spot_uploaded">Spot uploaded</string>
    <string name="picture_uploaded">Picture uploaded</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="and">and</string>
    <string name="share_image">Share Image</string>
    <string name="save_image">Save Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="share">Share</string>
    <string name="members">Members</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="email">Email</string>
    <string name="show_email">Email:</string>
    <string name="email_must_be_verified">Email must be verified, check your mails!</string>
    <string name="login_failed">Login failed!</string>
    <string name="password_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="password_reset_check_mails">Check your mails to reset your password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset">Reset</string>
    <string name="delete_post_question">Delete this post?</string>
    <string name="friends_no_posts">Your friends haven\'t upload any posts yet</string>
    <string name="no_posts_with_filter">No posts with this filter found</string>
    <string name="profile_no_uploads">You haven\'t upload anything yet</string>
    <string name="no_meet_ups">There are no meet ups at the moment</string>
    <string name="no_teams">You are not currently on any team</string>
    <string name="delete_account">Delete Account</string>
    <string name="email_exists">Email already exists</string>
    <string name="parkour_spots">Parkour Spots</string>
    <string name="google_maps_api" translatable="false">AIzaSyB_9KKegtWs3LOGSoTIhE51KGXagpqUeO8</string>
    <string name="you">You</string>
    <string name="clear_history">Clear history</string>
    <string name="navigate_to_spot">Navigate</string>
    <string name="google_street_view" translatable="false">Street View</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="navigate_to_meet_up">Navigate to meet up</string>
    <string name="show_street_view">Show Google Street View</string>
    <string name="remind_1_hour_before">Remind 1 hour before Meet Up</string>
    <string name="parkour_spot_type">Spot Type</string>
    <string name="parkour_park">Parkour Park</string>
    <string name="stairs">Stairs</string>
    <string name="wall_jumps">Wall Jumps</string>
    <string name="other">Other</string>
    <string name="use">Use</string>
    <string name="playground">Playground</string>
    <string name="calisthenics">Calisthenics</string>
    <string name="big_area">Big Area</string>
</resources>