<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vig.sebastian.snapchat.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.vig.sebastian.snapchat.fragment.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore"/>

    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.vig.sebastian.snapchat.fragment.TeamsFragment"
        android:label="@string/title_teams"
        tools:layout="@layout/fragment_teams"/>

    <fragment
        android:id="@+id/navigation_meet_ups"
        android:name="com.vig.sebastian.snapchat.fragment.MeetUpsFragment"
        android:label="@string/title_meet_ups"
        tools:layout="@layout/fragment_meet_ups"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.vig.sebastian.snapchat.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>