<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="@drawable/ic_baseline_arrow_back_24"
                android:foregroundTint="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_below="@id/backBtn"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_username"
                    android:textSize="17sp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editUsernameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:editable="false"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_email"
                    android:textSize="17sp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editEmailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:editable="false"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_country"
                    android:textSize="17sp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editCountryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890ßöÖäÄüÜ_-"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_city"
                    android:textSize="17sp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editCityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890ßöÖäÄüÜ_-"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_description"
                    android:textSize="17sp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_age"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editAgeEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/saveProfileSettingsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/dark_aqua"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>