<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible"
        android:id="@+id/resetPasswordRelativeLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/login_background" />

        <TextView
            android:id="@+id/resetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:text="@string/reset_password"
            android:textColor="@color/dark_blue"
            android:textSize="50sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/resetPasswordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/resetPasswordTextView"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_background_drawable">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_alignBottom="@id/resetEmailEditText"
                android:layout_alignEnd="@id/resetEmailEditText"
                android:layout_alignStart="@id/resetEmailEditText"
                android:layout_alignTop="@id/resetEmailEditText"/>

            <EditText
                android:id="@+id/resetEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#00000000"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            </RelativeLayout>

        <Button
            android:id="@+id/resetPasswordBtn"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/resetPasswordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/reset" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:foreground="@drawable/parkour"
            android:foregroundTint="@color/dark_blue" />

    </RelativeLayout>

</RelativeLayout>